--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="pages/index.css">
+
     <title>Mesto</title>
 </head>
-<body>
-<header class="header"><img src="images/header-logo.svg" alt="Логотип в виде надписи Mesto Russia" class="header__logo"></header>
+<body class="root">
+<header class="header">
+    <img src="images/header-logo.svg" alt="Логотип в виде надписи Mesto Russia" class="header__logo">
+</header>
 <main class="main">
     <section class="profile">
         <img src="images/avatar.jpg" alt="Фото пользователя" class="profile__avatar">
