--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="images/avatar.jpg" alt="Фото пользователя" class="profile__avatar">
         <div class="profile__info">
             <h1 class="profile__user-name">Кострова Арина</h1>
-            <button class="profile__edit-button" type="button"></button>
+            <button class="profile__edit-button profile__open-popup" type="button"></button>
             <p class="profile__description">Программист-путешественница</p>
         </div>
         <button class="profile__add-button" type="button"></button>
