--- a/index.html
+++ b/index.html
@@ -74,5 +74,16 @@
 <footer class="footer">
     <p class="footer__author">&copy; 2022 Mesto Russia</p>
 </footer>
+<section class="popup">
+    <div class="popup__container">
+        <button class="popup__close-button"></button>
+        <form action="" class="popup__form">
+            <h2 class="popup__title">Редактировать профиль</h2>
+            <input type="text" placeholder="Имя пользователя" name="user-name" class="popup__input">
+            <input type="text" placeholder="Краткое описание" name="description" class="popup__input">
+            <button class="popup__save-button">Сохранить</button>
+        </form>
+    </div>
+</section>
 </body>
 </html>
