style: resolution 320px added

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="pages/index.css">
+    <link rel="stylesheet" href="style.css">
+
 
     <title>Mesto</title>
 </head>
@@ -20,7 +21,7 @@
         <div class="profile__info">
             <h1 class="profile__user-name">Кострова Арина</h1>
             <button class="profile__edit-button profile__open-popup" type="button"></button>
-            <p class="profile__description">Программист-путешественница</p>
+            <p class="profile__description">Программирую и путешествую</p>
         </div>
         <button class="profile__add-button" type="button"></button>
     </section>
