--- a/index.html
+++ b/index.html
@@ -80,11 +80,14 @@
         <button class="popup__close-button"></button>
         <form action="" class="popup__form">
             <h2 class="popup__title">Редактировать профиль</h2>
-            <input type="text" placeholder="Имя пользователя" name="user-name" class="popup__input">
-            <input type="text" placeholder="Краткое описание" name="description" class="popup__input">
+            <input type="text" placeholder="Имя пользователя" name="user-name"
+                   class="popup__input popup__input_type_user-name">
+            <input type="text" placeholder="Краткое описание" name="description"
+                   class="popup__input popup__input_type_description">
             <button class="popup__save-button">Сохранить</button>
         </form>
     </div>
 </section>
+<script type="text/javascript" src="scripts/index.js"></script>
 </body>
 </html>
