--- a/index.html
+++ b/index.html
@@ -87,6 +87,6 @@
         </form>
     </div>
 </section>
-<script type="text/javascript" src="scripts/index.js"></script>
+<script src="scripts/index.js"></script>
 </body>
 </html>
