--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Mesto Russia">
+    <meta name="keywords" content="HTML5, CSS, JavaScript">
+    <meta name="author" content="Кострова Арина">
     <link rel="stylesheet" href="pages/index.css">
-
-
     <title>Mesto</title>
 </head>
 <body class="root">
@@ -77,7 +76,7 @@
 <section class="popup">
     <div class="popup__container">
         <button class="popup__close-button"></button>
-        <form action="" class="popup__form">
+        <form class="popup__form">
             <h2 class="popup__title">Редактировать профиль</h2>
             <input type="text" placeholder="Имя пользователя" name="user-name"
                    class="popup__input popup__input_type_user-name">
