fix: ixed some bugs

--- a/index.html
+++ b/index.html
@@ -28,42 +28,42 @@
             <li class="post__item">
                 <img src="images/post-photos/Barcelona.JPG" alt="Барселона" class="post__image">
                 <div class="post__description">
-                    <p class="post__subscription">Барселона</p>
+                    <h2 class="post__subscription">Барселона</h2>
                     <button class="post__like" type="button"></button>
                 </div>
             </li>
             <li class="post__item">
                 <img src="images/post-photos/Venecia.JPG" alt="Венеция" class="post__image">
                 <div class="post__description">
-                    <p class="post__subscription">Венеция</p>
+                    <h2 class="post__subscription">Венеция</h2>
                     <button class="post__like" type="button"></button>
                 </div>
             </li>
             <li class="post__item">
                 <img src="images/post-photos/Porto.JPG" alt="Порто" class="post__image">
                 <div class="post__description">
-                    <p class="post__subscription">Порто</p>
+                    <h2 class="post__subscription">Порто</h2>
                     <button class="post__like" type="button"></button>
                 </div>
             </li>
             <li class="post__item">
                 <img src="images/post-photos/Vein.JPG" alt="Вена" class="post__image">
                 <div class="post__description">
-                    <p class="post__subscription">Вена</p>
+                    <h2 class="post__subscription">Вена</h2>
                     <button class="post__like" type="button"></button>
                 </div>
             </li>
             <li class="post__item">
                 <img src="images/post-photos/Budapest.JPG" alt="Будапешт" class="post__image">
                 <div class="post__description">
-                    <p class="post__subscription">Будапешт</p>
+                    <h2 class="post__subscription">Будапешт</h2>
                     <button class="post__like" type="button"></button>
                 </div>
             </li>
             <li class="post__item">
                 <img src="images/post-photos/Lugano.JPG" alt="Лугано" class="post__image">
                 <div class="post__description">
-                    <p class="post__subscription">Лугано</p>
+                    <h2 class="post__subscription">Лугано</h2>
                     <button class="post__like" type="button"></button>
                 </div>
             </li>
