fix: button fixed

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 </footer>
 <div class="popup">
     <div class="popup__container">
-        <button class="popup__close-button" type="button"></button>
+        <button class="popup__close-button" type="button" aria-label="Кнопка закрытия окна"></button>
         <form class="popup__form" name="redaction">
             <h3 class="popup__title">Редактировать профиль</h3>
             <input type="text" placeholder="Имя пользователя" required name="userName"
