--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="images/avatar.jpg" alt="Фото пользователя" class="profile__avatar">
         <div class="profile__info">
             <h1 class="profile__user-name">Кострова Арина</h1>
-            <button class="profile__edit-button" type="button" aria-label="Кнопка редактирования профиля"></button>
+            <button class="profile__edit-button" id='profileEditBtn' type="button" aria-label="Кнопка редактирования профиля"></button>
             <p class="profile__description">Программирую и путешествую</p>
         </div>
         <button class="profile__add-button" type="button" aria-label="Добавить пост"></button>
@@ -31,16 +31,29 @@
 <footer class="footer">
     <p class="footer__author">&copy; 2022 Mesto Russia</p>
 </footer>
-<div class="popup">
+<div class="popup popup_type_edit-profile">
     <div class="popup__container">
-        <button class="popup__close-button" type="button" aria-label="Кнопка закрытия окна"></button>
-        <form class="popup__form" name="redaction">
+        <button class="popup__close-button popup__close-button_type_profile" type="button" aria-label="Кнопка закрытия окна"></button>
+        <form class="popup__form popup__form_type_profile-reaction" name="redaction">
             <h3 class="popup__title">Редактировать профиль</h3>
             <input type="text" placeholder="Имя пользователя" required name="userName"
                    class="popup__input popup__input_type_user-name">
             <input type="text" placeholder="Краткое описание" required name="description"
                    class="popup__input popup__input_type_description">
-            <button class="popup__save-button" type="submit">Сохранить</button>
+            <button class="popup__save-button popup__save-button_type_save-profile-info" type="submit">Сохранить</button>
+        </form>
+    </div>
+</div>
+<div class="popup popup_type_add-photo">
+    <div class="popup__container">
+        <button class="popup__close-button popup__close-button_type_post" type="button" aria-label="Кнопка закрытия окна"></button>
+        <form class="popup__form  popup__form_type_post-creating" name="creating">
+            <h3 class="popup__title">Новое место</h3>
+            <input type="text" placeholder="Название" required name="postName"
+                   class="popup__input popup__input_type_post-name">
+            <input type="text" placeholder="Ссылка на картинку" required name="imageLink"
+                   class="popup__input popup__input_type_link">
+            <button class="popup__save-button popup__save-button_type_create-new-post" type="submit">Создать</button>
         </form>
     </div>
 </div>
