--- a/index.html
+++ b/index.html
@@ -37,13 +37,19 @@
         <button class="popup__close-button popup__close-button_type_profile" type="button"
                 aria-label="Кнопка закрытия окна"></button>
         <form class="popup__form popup__form_type_profile-redaction" name="redaction">
+            <h3 class="popup__title">Редактировать профиль</h3>
             <fieldset class="popup__fieldset">
-                <h3 class="popup__title">Редактировать профиль</h3>
-                <input type="text" placeholder="Имя пользователя" required name="userName"
-                       class="popup__input popup__input_type_user-name" minlength="2" maxlength="40">
-                <input type="text" placeholder="Краткое описание" required name="description" minlength="2"
-                       maxlength="200"
-                       class="popup__input popup__input_type_description">
+                <label class="popup__label">
+                    <input type="text" placeholder="Имя пользователя" required id="userName"
+                           class="popup__input popup__input_type_user-name" minlength="2" maxlength="40">
+                    <span class="popup__input-error userName-error"> </span>
+                </label>
+                <label class="popup__label">
+                    <input type="text" placeholder="Краткое описание" required id="description" minlength="2"
+                           maxlength="200"
+                           class="popup__input popup__input_type_description">
+                    <span class="popup__input-error description-error"> </span>
+                </label>
                 <button class="popup__save-button popup__save-button_type_save-profile-info" type="submit">Сохранить
                 </button>
             </fieldset>
@@ -55,12 +61,18 @@
         <button class="popup__close-button popup__close-button_type_post" type="button"
                 aria-label="Кнопка закрытия окна"></button>
         <form class="popup__form  popup__form_type_post-creating" name="creating">
+            <h3 class="popup__title">Новое место</h3>
             <fieldset class="popup__fieldset">
-                <h3 class="popup__title">Новое место</h3>
-                <input type="text" placeholder="Название" required name="postName"
-                       class="popup__input popup__input_type_post-name">
-                <input type="text" placeholder="Ссылка на картинку" required name="imageLink"
-                       class="popup__input popup__input_type_link">
+                <label class="popup__label">
+                    <input type="text" placeholder="Название" required id="postName"
+                           class="popup__input popup__input_type_post-name" minlength="2" maxlength="30">
+                    <span class="popup__input-error postName-error"> </span>
+                </label>
+                <label class="popup__label">
+                    <input type="url" placeholder="Ссылка на картинку" required id="imageLink"
+                           class="popup__input popup__input_type_link">
+                    <span class="popup__input-error imageLink-error"> </span>
+                </label>
                 <button class="popup__save-button popup__save-button_type_create-new-post" type="submit">Создать
                 </button>
             </fieldset>
@@ -89,7 +101,9 @@
         </div>
     </li>
 </template>
+
 <script type="text/javascript" src="scripts/images.js"></script>
 <script type="text/javascript" src="scripts/index.js"></script>
+<script type="text/javascript" src="scripts/validation.js"></script>
 </body>
 </html>
