--- a/index.html
+++ b/index.html
@@ -104,6 +104,6 @@
 
 <script type="text/javascript" src="scripts/images.js"></script>
 <script type="text/javascript" src="scripts/index.js"></script>
-<script type="text/javascript" src="scripts/validation.js"></script>
+<script type="text/javascript" src="scripts/validate.js"></script>
 </body>
 </html>
