fix: close popup fixed

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="HTML5, CSS, JavaScript">
     <meta name="author" content="Кострова Арина">
     <link rel="stylesheet" href="pages/index.css">
+    <link rel="icon" type="image/png" href="images/header-logo.svg">
     <title>Mesto</title>
 </head>
 <body class="root">
@@ -60,7 +61,7 @@
     <div class="popup__container">
         <button class="popup__close-button popup__close-button_type_post" type="button"
                 aria-label="Кнопка закрытия окна"></button>
-        <form class="popup__form  popup__form_type_post-creating" name="creating">
+        <form class="popup__form popup__form_type_post-creating" name="creating">
             <h3 class="popup__title">Новое место</h3>
             <fieldset class="popup__fieldset">
                 <label class="popup__label">
@@ -102,8 +103,9 @@
     </li>
 </template>
 
-<script type="text/javascript" src="scripts/images.js"></script>
-<script type="text/javascript" src="scripts/index.js"></script>
-<script type="text/javascript" src="scripts/validate.js"></script>
+<script src="scripts/images.js"></script>
+<script src="scripts/validate.js"></script>
+<script src="scripts/index.js"></script>
+
 </body>
 </html>
