--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 <script src="scripts/images.js"></script>
 <script src="scripts/validate.js"></script>
-<script src="scripts/index.js"></script>
+<script type="module" src="scripts/index.js"></script>
 
 </body>
 </html>
