--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
     </li>
 </template>
 
-<script src="scripts/images.js"></script>
-<script type="module" src="scripts/index.js"></script>
+<script type="module" src="pages/index.js"></script>
 
 </body>
 </html>
