--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
             <h3 class="popup__title">Редактировать профиль</h3>
             <fieldset class="popup__fieldset">
                 <label class="popup__label">
-                    <input type="text" placeholder="Имя пользователя" required id="userName"
+                    <input type="text" placeholder="Имя пользователя" required id="userName" name="name"
                            class="popup__input popup__input_type_user-name" minlength="2" maxlength="40">
                     <span class="popup__input-error userName-error"> </span>
                 </label>
                 <label class="popup__label">
-                    <input type="text" placeholder="Краткое описание" required id="description" minlength="2"
+                    <input type="text" placeholder="Краткое описание" required id="description" minlength="2" name="link"
                            maxlength="200"
                            class="popup__input popup__input_type_description">
                     <span class="popup__input-error description-error"> </span>
@@ -65,12 +65,12 @@
             <h3 class="popup__title">Новое место</h3>
             <fieldset class="popup__fieldset">
                 <label class="popup__label">
-                    <input type="text" placeholder="Название" required id="postName"
+                    <input type="text" placeholder="Название" required id="postName" name="name"
                            class="popup__input popup__input_type_post-name" minlength="2" maxlength="30">
                     <span class="popup__input-error postName-error"> </span>
                 </label>
                 <label class="popup__label">
-                    <input type="url" placeholder="Ссылка на картинку" required id="imageLink"
+                    <input type="url" placeholder="Ссылка на картинку" required id="imageLink" name="link"
                            class="popup__input popup__input_type_link">
                     <span class="popup__input-error imageLink-error"> </span>
                 </label>
