--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Mesto Russia">
     <meta name="keywords" content="HTML5, CSS, JavaScript">
     <meta name="author" content="Кострова Арина">
-    <link rel="icon" type="image/png" href="images/header-logo.svg">
+    <link rel="icon" type="image/png" href="<%=require('./images/header-logo.svg')%>">
     <title>Mesto</title>
 </head>
 <body class="root">
