feat: storing user information on the server added

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
                     <span class="popup__input-error userName-error"> </span>
                 </label>
                 <label class="popup__label">
-                    <input type="text" placeholder="Краткое описание" required id="description" minlength="2" name="link"
+                    <input type="text" placeholder="Краткое описание" required id="description" minlength="2" name="about"
                            maxlength="200"
                            class="popup__input popup__input_type_description">
                     <span class="popup__input-error description-error"> </span>
