--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,9 @@
 </header>
 <main class="main">
     <section class="profile">
-        <img src="<%=require('./images/avatar.jpg')%>" alt="Фото пользователя" class="profile__avatar">
+        <div class="profile__avatar">
+            <img src="<%=require('./images/avatar.jpg')%>" alt="Фото пользователя" class="profile__avatar-image">
+        </div>
         <div class="profile__info">
             <h1 class="profile__user-name">Кострова Арина</h1>
             <button class="profile__edit-button" id='profileEditBtn' type="button"
@@ -93,14 +95,16 @@
 </div>
 <div class="popup popup_type_deletion">
     <div class="popup__container popup__small-container">
-        <button class="popup__close-button popup__close-button_type_deletion" type="button" aria-label="Кнопка закрытия окна"></button>
+        <button class="popup__close-button popup__close-button_type_deletion" type="button"
+                aria-label="Кнопка закрытия окна"></button>
         <h3 class="popup__title popup__confirmation-title">Вы уверены?</h3>
         <button class="popup__save-button popup__confirmation-button" type="submit">Да</button>
     </div>
 </div>
 <div class="popup popup_type_avatar">
     <div class="popup__container popup__avatar-container">
-        <button class="popup__close-button popup__close-button_type_deletion" type="button" aria-label="Кнопка закрытия окна"></button>
+        <button class="popup__close-button popup__close-button_type_deletion" type="button"
+                aria-label="Кнопка закрытия окна"></button>
         <form class="popup__form popup__form_type_post-creating" name="creating">
             <h3 class="popup__title">Обновить аватар</h3>
             <fieldset class="popup__fieldset">
